# JITForge

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  compose.yaml
.github/workflows/: ci.yml
apps/jit-cli/: Cargo.toml
apps/jit-cli/src/: main.rs
apps/jit-server/: Cargo.toml
apps/jit-server/src/: main.rs  web.rs
apps/jit-server/web/: app.css  app.js  index.html
apps/jit-worker/: Cargo.toml
apps/jit-worker/src/: jobs.rs  main.rs  runner.rs  service.rs  synthesizer.rs  web_access.rs
crates/jit-artifact/: Cargo.toml
crates/jit-artifact/src/: lib.rs
crates/jit-config/: Cargo.toml
crates/jit-config/src/: lib.rs
crates/jit-domain/: Cargo.toml
crates/jit-domain/src/: lib.rs
crates/jit-protocol/: Cargo.toml  build.rs
crates/jit-protocol/src/: lib.rs
crates/jit-storage/: Cargo.toml
crates/jit-storage/src/: lib.rs
deployments/compose/: Dockerfile
deployments/nginx/: default.conf  publish-cli.sh
deployments/nginx/html/assets/: landing.css
deployments/searxng/: settings.yml
docs/: PROJECT_PLAN.zh-CN.md  STATUS.zh-CN.md
docs/slides/: README.md  index.html  jitforge.md
migrations/: 0001_registry.sql  0002_agent_runtime.sql  0003_input_samples.sql  0004_intent_and_lifecycle.sql  0005_job_inputs.sql  0006_http_capability_approvals.sql  0007_example_correction_inputs.sql
proto/: worker.proto
runtimes/python-stdlib-v1/: Dockerfile
runtimes/python-stdlib-v2/: Dockerfile  entrypoint.py  jitforge_http.py
web/console/: app.css  app.js  index.html
web/landing/: index.html
web/landing/assets/: landing.css  landing.js
