[workspace]
members = [
    "apps/jit-cli",
    "apps/jit-server",
    "apps/jit-worker",
    "crates/jit-artifact",
    "crates/jit-config",
    "crates/jit-domain",
    "crates/jit-protocol",
    "crates/jit-storage",
]
default-members = [
    "apps/jit-cli",
    "apps/jit-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.97"
license = "AGPL-3.0-only"
repository = "https://github.com/Yan233th/JITForge"
publish = false

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
humantime = "2.2.0"
hex = "0.4.3"
prost = "0.13.5"
reqwest = { version = "0.12.20", default-features = false, features = ["http2", "json", "rustls-tls", "stream"] }
rig-core = { version = "=0.40.0", default-features = false, features = ["reqwest", "rustls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
subtle = "2.6.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
toml = "0.9.8"
tonic = { version = "0.12.3", features = ["transport"] }
tonic-build = "0.12.3"
tower-http = { version = "0.6.6", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
ulid = "1.2.1"
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
url = "2.5.8"

# This project is developed on small machines and does not need multi-gigabyte
# DWARF output for normal checks. Set CARGO_PROFILE_DEV_DEBUG=1 temporarily
# when a native debugger is needed.
[profile.dev]
debug = 0

[profile.test]
debug = 0

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
