[package]
name = "jit-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "jit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
humantime.workspace = true
jit-config = { path = "../../crates/jit-config" }
jit-protocol = { path = "../../crates/jit-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
