[package]
name = "jit-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true
jit-artifact = { path = "../../crates/jit-artifact" }
jit-config = { path = "../../crates/jit-config" }
jit-protocol = { path = "../../crates/jit-protocol" }
jit-storage = { path = "../../crates/jit-storage" }
rig-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
subtle.workspace = true
tokio.workspace = true
tonic.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
url.workspace = true
