[package]
name = "jit-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
hex.workspace = true
jit-protocol = { path = "../jit-protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
